# market-info-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/: settings.py  urls.py  wsgi.py
apps/core/: admin.py  urls.py  views.py
apps/currency_rates/: clients.py  services.py  urls.py  views.py
apps/website_info/: admin.py  models.py  serializers.py  urls.py  views.py
apps/website_info/migrations/: 0001_initial.py  0002_alter_websiteinfo_url.py
tests/currency_rates/: test_clients.py  test_services.py  test_views.py
tests/website_info/: test_models.py  test_serializers.py  test_views.py
